# auto_js_reverse

./: .gitignore  CHANGELOG  README.md  pyproject.toml
.mcp_config/: config.json.template
doc/: API.md  CONTRIBUTING.md  MILESTONES.md  ROADMAP.md  TESTING.md
scripts/: check_test_env.py  run_tests.py
skill/auto_js_reverse/: SKILL.md
src/auto_js_reverse/: main.py
src/auto_js_reverse/node_worker/: package.json  processor.js
src/auto_js_reverse/services/: browser_connector.py  embedding_service.py  index_manager.py  pipeline.py  reverse_analyzer.py
src/browser_insight/: __init__.py  main.py
src/browser_insight/node_worker/: package-lock.json  package.json  processor.js
src/browser_insight/services/: __init__.py  browser_connector.py  embedding_service.py  index_manager.py  node_bridge.py  pipeline.py  reverse_analyzer.py
tests/: test_e2e_baidu.py  test_fenbi_mcp_tools.py  test_new_tools.py  test_pipeline_resilience.py
